# EchoGloves-SLR-MOCAP-Alpha

./: .gitattributes  .gitignore  2026-04-19-161725-local-command-caveatcaveat-the-messages-below.txt  2026-04-21-145133-local-command-caveatcaveat-the-messages-below.txt  2026-04-30-161052-local-command-caveatcaveat-the-messages-below.txt  2026-05-07-134312-local-command-caveatcaveat-the-messages-below.txt  2026-05-08-111248-local-command-caveatcaveat-the-messages-below.txt  2026-05-15-182208-help-me-fix-the-issues-reported-by-doctor-below.txt  AGENTS.md  CLAUDE.md  ONBOARDING.md  PROGRESS.md  PROGRESS_CN.md  Q&A.md  README.md  SETUP.md  StepPrompt.md  asyncudp.txt  git_status_tmp.txt  platformio.ini  session-ses_365a.md  session-ses_3a36.md  session-ses_3a91.md  skills-lock.json  tflite2.txt  tflite_search.txt
.claude/: settings.json  (+1 more)
GLM-V10_CodeFramework/EdgeAI_DataGlove_V3_CodeFramework/glove_relay/: pyproject.toml  requirements.txt
GLM-V10_CodeFramework/EdgeAI_DataGlove_V3_CodeFramework/glove_relay/proto/: glove_data.proto
GLM-V10_CodeFramework/EdgeAI_DataGlove_V3_CodeFramework/glove_relay/scripts/: data_collector.py
GLM-V10_CodeFramework/EdgeAI_DataGlove_V3_CodeFramework/glove_relay/src/: __init__.py  main.py  udp_server.py  ws_server.py
GLM-V10_CodeFramework/EdgeAI_DataGlove_V3_CodeFramework/glove_relay/src/models/: base_model.py  l1_cnn_attention.py  l1_ms_tcn.py  model_registry.py  stgcn_model.py
GLM-V10_CodeFramework/EdgeAI_DataGlove_V3_CodeFramework/glove_relay/src/nlp/: __init__.py
GLM-V10_CodeFramework/EdgeAI_DataGlove_V3_CodeFramework/glove_relay/src/tts/: __init__.py  tts_engine.py
GLM-V10_CodeFramework/EdgeAI_DataGlove_V3_CodeFramework/glove_relay/src/utils/: __init__.py
GLM-V10_CodeFramework/EdgeAI_DataGlove_V3_CodeFramework/glove_relay/tests/: __init__.py
(+239 files in other folders)
